# homework_7_web

./: README.md  config.ini  main.py  pyproject.toml
conf/: db.py  models.py
migrations/versions/: b8dd256ef815_init.py
